<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2012 Sinar Project

    This file is part of Malaysian Bill Watcher.

    Malaysian Bill Watcher is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Malaysian Bill Watcher is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Malaysian Bill Watcher ; if not, write to the Free Software
    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
-->

<resources>
	<string name="app_name">M\'sian Bill Watcher</string>
	<string name="view_bill">View</string>
	<string name="download">Download</string>
	<string name="tweet">Tweet</string>
	<string name="browse_bills">browse</string>
	<string name="search_bills">search</string>
	<string name="sync">Sync</string>
	<string name="syncing">Syncing...</string>
	<string name="about">About</string>
	<string name="updates_found">update(s) found</string>
	<string name="bill_name">Bill Name</string>
	<string name="bill_name_hint">Search by name of bill</string>
	<string name="status">Status</string>
	<string name="search">search</string>
	<string name="last_between">Last Update Between</string>
	<string name="view_source">View Source</string>

	<string name="code">Code</string>
	<string name="revision">Revision</string>
	<string name="date_presented">Date presented</string>
	<string name="read_by">Read by</string>
	<string name="supported_by">Supported by</string>
	<string name="link">Link</string>

	<string name="mark_as_read">Mark as read</string>
	<string name="mark_all_read">Mark all as read</string>
	<string name="mark_all_unread">Mark all as unread</string>

	<string name="any">Any</string>
	<string name="fav">Starred bills</string>

	<string name="unknown_host">Unable to connect to internet</string>
	<string name="file_not_found">File not found</string>

	<string name="lang_code">en</string>

	<string name="gpl">
Copyright (C) 2012 Sinar Project info@sinarproject.com\n\n
Malaysian Bill Watcher is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.\n\n
Malaysian Bill Watcher is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.\n\n
You should have received a copy of the GNU General Public License
    along with Malaysian Bill Watcher ; if not, see http://www.gnu.org/licenses/.
	</string>
</resources>

