<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012 Sinar Project

    This file is part of Malaysian Bill Watcher.

    Malaysian Bill Watcher is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Malaysian Bill Watcher is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Malaysian Bill Watcher; if not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/layout"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<TextView
			android:id="@+id/bill_name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@android:style/TextAppearance.Large"
			android:text="@string/bill_name" />
		<EditText
			android:id="@+id/bill_name_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="textShortMessage"
			android:imeOptions="actionGo"
			android:hint="@string/bill_name_hint" />

		<TextView
			android:id="@+id/status_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			style="@android:style/TextAppearance.Large"
			android:text="@string/status" />
		<Spinner
			android:id="@+id/status_spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:prompt="@string/status"/>

		<CheckBox
			android:id="@+id/fav"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fav" />
		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:background="@android:color/darker_gray"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			style="@android:style/TextAppearance.Large"
			android:text="@string/last_between" />
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/after_date_button"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" />
			<Button
				android:id="@+id/before_date_button"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" />
		</LinearLayout>

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="5dp"
			android:background="@android:color/darker_gray"/>

		<Button
			android:id="@+id/search_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:drawableLeft="@android:drawable/ic_menu_search"
			android:text="@string/search" />
	</LinearLayout>
</ScrollView>

