<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2012 Sinar Project

    This file is part of Malaysian Bill Watcher.

    Malaysian Bill Watcher is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    Malaysian Bill Watcher is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Malaysian Bill Watcher ; if not, write to the Free Software
    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:gravity="center" >
	<Button
		android:id="@+id/browse"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_gravity="center"
		android:gravity="center"
		android:drawableTop="@android:drawable/ic_menu_agenda"
		android:text="@string/browse_bills" />
	<Button
		android:id="@+id/search"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_gravity="center"
		android:gravity="center"
		android:drawableTop="@android:drawable/ic_menu_search"
		android:text="@string/search_bills" />
	<Button
		android:id="@+id/sync"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_gravity="center"
		android:gravity="center"
		android:drawableTop="@android:drawable/stat_notify_sync"
		android:text="@string/sync" />
</LinearLayout>

